--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
+    "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "postcss": "8.4.30",
     "react": "18.2.0",
